# openfigi-rs

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  clippy.toml  openfigi_spec.yml  rutfmt.toml  typos.toml
.devcontainer/: devcontainer.json
.github/: codecov.yml  instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug_report.yml  2-feature_request.yml  3-question.yml  4-documentation_improvement.yml  config.yml
.github/workflows/: cd.yml  ci.yml  security-audit.yml
resources/: currency_cache.json  id_type_cache.json  id_type_enum_docs.csv  market_sec_desc_cache.json  market_sec_desc_enum_docs.csv  mic_code_cache.json  security_type_enum_docs.csv  state_code_cache.json
resources/cached_data/: exch_code_cache.json  security_type2_cache.json  security_type_cache.json
resources/docs/: id_type_enum_docs.csv  security_type_enum_docs.csv
resources/others/: mapping_mic_figi-exchange-codes.csv
scripts/: fetch_test_data.sh  gen_enum.sh  run_all_gen_enum.sh  test-ci.sh
src/: client.rs  client_builder.rs  error.rs  lib.rs  macros.rs  request_builder.rs  test_utils.rs
src/endpoint/: filter.rs  macros.rs  mapping.rs  mod.rs  search.rs
src/model/: mod.rs
src/model/enums/: currency.rs  exch_code.rs  id_type.rs  market_sec_desc.rs  mic_code.rs  mod.rs  option_type.rs  security_type.rs  security_type2.rs  state_code.rs
src/model/request/: common.rs  filter_request.rs  macros.rs  mapping_request.rs  mod.rs  search_request.rs
tests/: filter.rs  mapping.rs  search.rs
tests/common/: mod.rs
(+14 files in other folders)
